--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Placebook</title>
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW4_5W94arxnIQPrPn_AMJY7lHtxWZiAE"
+  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%"
   async defer></script>
   </head>
   <body>
